<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Workout</string>
    <string name="workout">workout</string>
    <string name="msg_invalid_input">Input invalid</string>
    <string name="mask_weight" formatted="false">%d kg</string>
    <string name="lbl_records">Records</string>
    <string name="lbl_record_date">Record date</string>
    <string name="lbl_record_count">Count</string>
    <string name="lbl_weight">Weight</string>
    <string name="lbl_workout_count">Count</string>
    <string name="btn_save">Save</string>
    <string name="lbl_description">Description</string>
    <string name="stub_description">Humpty dumpty sat on a wall,Humpty Dumpty had a great fall.All the king’s horses,And all the king’s men,Couldn’t put Humpty together again</string>
    <string name="stub_workout_name">bench press</string>
    <string name="lbl_add_workout_type">Add workout type</string>
    <string name="lbl_add">Add</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="properties">Properties</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_save">Save</string>
    <string name="nothing_to_share">Nothing to share.</string>
    <string name="record_message_pattern" formatted="false">Hello! %s I have achieved new record in workout %s! (Count = %d, Weigth = %d)</string>
    <string name="fix_orientation">Fix orientation</string>
    <string name="exit">Exit</string>
    <string name="title_activity_workout">WorkoutActivity</string>
    <string name="action_settings">Settings</string>
</resources>