<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WorkoutTypeActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:id="@+id/view_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="?android:attr/actionBarSize"
        >
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
       >
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="4dp">

        <ImageView
            android:id="@+id/workout_image"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"
            android:minWidth="200dp"/>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="4dp">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            android:useDefaultMargins="true"
            android:orientation="horizontal"
            android:textAppearance="?android:textAppearanceMedium"
            >
        <TextView
            android:id="@+id/record_label"
            android:text="@string/lbl_records"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_gravity="start"
            android:textColor="@color/colorPrimary"
            android:layout_columnSpan="2"/>

            <TextView
                android:id="@+id/record_date_label"
                 android:text="@string/lbl_record_date"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_gravity="start"/>
            <TextView
                android:id="@+id/record_date_value"
                android:textAppearance="?android:textAppearanceMedium"/>
            <TextView
                android:id="@+id/record_count_label"
                android:text="@string/lbl_record_count"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_gravity="start"/>
            <TextView
                android:id="@+id/record_count_value"
                android:textAppearance="?android:textAppearanceMedium"/>
            <TextView
                android:id="@+id/record_weight_label"
                android:text="@string/lbl_weight"
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_gravity="start"/>
            <TextView
                android:id="@+id/record_weight_value"
                android:textAppearance="?android:textAppearanceMedium"/>
        </GridLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="4dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true">

                <TextView
                    android:id="@+id/workout_weight_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_weight"
                    android:gravity="center_horizontal"/>
                <SeekBar
                    android:id="@+id/workout_weight_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="500"/>
                <EditText
                    android:id="@+id/workout_count_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:hint="@string/lbl_workout_count"
                    android:inputType="number"
                  />
                <Button
                    android:id="@+id/workout_save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/btn_save"
                    android:textColor="@color/colorAccent"
                    android:background="@android:color/transparent"/>
      </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"

            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/workout_description_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_description"
                    android:textColor="@color/colorPrimary"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:layout_gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/workout_description_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stub_description"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_gravity="start"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    </ScrollView>

</FrameLayout>